--- a/CoreApi.DataContext/CoreApi.DataContext.csproj
+++ b/CoreApi.DataContext/CoreApi.DataContext.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CoreApi.Infrastructure\CoreApi.Infrastructure.csproj" />
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\CoreApi.Models\CoreApi.Models.csproj" />
   </ItemGroup>
 
