--- a/CoreApi.Services/CoreApi.Services.csproj
+++ b/CoreApi.Services/CoreApi.Services.csproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CoreApi.DataContext\CoreApi.DataContext.csproj" />
-    <ProjectReference Include="..\CoreApi.Infrastructure\CoreApi.Infrastructure.csproj" />
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\CoreApi.Models\CoreApi.Models.csproj" />
     <ProjectReference Include="..\CoreApi.Repositories\CoreApi.Repositories.csproj" />
   </ItemGroup>
