--- a/CoreApi.Web/CoreApi.Web.csproj
+++ b/CoreApi.Web/CoreApi.Web.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="6.1.1" />
+    <PackageReference Include="AutoMapper" Version="6.2.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.1.0" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
@@ -26,7 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CoreApi.DataContext\CoreApi.DataContext.csproj" />
-    <ProjectReference Include="..\CoreApi.Infrastructure\CoreApi.Infrastructure.csproj" />
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\CoreApi.Models\CoreApi.Models.csproj" />
     <ProjectReference Include="..\CoreApi.Repositories\CoreApi.Repositories.csproj" />
     <ProjectReference Include="..\CoreApi.Services\CoreApi.Services.csproj" />
