--- a/SalesApi.Models/SalesApi.Models.csproj
+++ b/SalesApi.Models/SalesApi.Models.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\SharedSettings\SharedSettings.csproj" />
   </ItemGroup>
 
 </Project>
