--- a/SalesApi.ViewModels/SalesApi.ViewModels.csproj
+++ b/SalesApi.ViewModels/SalesApi.ViewModels.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\SharedSettings\SharedSettings.csproj" />
   </ItemGroup>
 
 </Project>
