--- a/SalesApi.Repositories/SalesApi.Repositories.csproj
+++ b/SalesApi.Repositories/SalesApi.Repositories.csproj
@@ -12,6 +12,7 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\SalesApi.DataContext\SalesApi.DataContext.csproj" />
     <ProjectReference Include="..\SalesApi.Models\SalesApi.Models.csproj" />
+    <ProjectReference Include="..\SalesApi.Shared\SalesApi.Shared.csproj" />
   </ItemGroup>
 
 </Project>
