--- a/SalesApi.DataContext/SalesApi.DataContext.csproj
+++ b/SalesApi.DataContext/SalesApi.DataContext.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\SalesApi.Models\SalesApi.Models.csproj" />
+    <ProjectReference Include="..\SalesApi.Shared\SalesApi.Shared.csproj" />
   </ItemGroup>
 
 </Project>
