--- a/SalesApi.ViewModels/SalesApi.ViewModels.csproj
+++ b/SalesApi.ViewModels/SalesApi.ViewModels.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="7.3.0-beta2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\SalesApi.Shared\SalesApi.Shared.csproj" />
     <ProjectReference Include="..\SharedSettings\SharedSettings.csproj" />
