--- a/SalesApi.Web/appsettings.json
+++ b/SalesApi.Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SalesApi;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=SalesApi;User Id=sa;Password=Bx@steel;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
