--- a/AuthorizationServer/appsettings.json
+++ b/AuthorizationServer/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AuthorizationServer;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=AuthorizationServer;User Id=sa;Password=Bx@steel;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
