--- a/SalesApi.ViewModels/SalesApi.ViewModels.csproj
+++ b/SalesApi.ViewModels/SalesApi.ViewModels.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="7.3.0-beta2" />
+    <PackageReference Include="FluentValidation" Version="7.3.4" />
   </ItemGroup>
 
   <ItemGroup>
