--- a/SalesApi.Services/SalesApi.Services.csproj
+++ b/SalesApi.Services/SalesApi.Services.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\SalesApi.Models\SalesApi.Models.csproj" />
     <ProjectReference Include="..\SalesApi.Repositories\SalesApi.Repositories.csproj" />
     <ProjectReference Include="..\SalesApi.Shared\SalesApi.Shared.csproj" />
+    <ProjectReference Include="..\SalesApi.ViewModels\SalesApi.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
