--- a/SalesApi.Repositories/SalesApi.Repositories.csproj
+++ b/SalesApi.Repositories/SalesApi.Repositories.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SalesApi.Infrastructure\SalesApi.Infrastructure.csproj" />
+    <ProjectReference Include="..\SalesApi.Core\SalesApi.Core.csproj" />
     <ProjectReference Include="..\SalesApi.Shared\SalesApi.Shared.csproj" />
   </ItemGroup>
 
