--- a/SalesApi.Web/SalesApi.Web.csproj
+++ b/SalesApi.Web/SalesApi.Web.csproj
@@ -34,7 +34,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\SalesApi.Infrastructure\SalesApi.Infrastructure.csproj" />
+    <ProjectReference Include="..\SalesApi.Core\SalesApi.Core.csproj" />
     <ProjectReference Include="..\SalesApi.Repositories\SalesApi.Repositories.csproj" />
     <ProjectReference Include="..\SalesApi.Services\SalesApi.Services.csproj" />
     <ProjectReference Include="..\SalesApi.Shared\SalesApi.Shared.csproj" />
