--- a/Sales.Api/Properties/launchSettings.json
+++ b/Sales.Api/Properties/launchSettings.json
@@ -6,9 +6,9 @@
       "launchUrl": "http://localhost:5100/swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "Dave:AuthorizationServer:ServerBase": "http://localhost:5000",
-        "Dave:SalesApi:ServerBase": "http://localhost:5100",
-        "Dave:SalesApi:ClientBase": "http://localhost:4200"
+        "AuthorizationServer:ServerBase": "http://localhost:5000",
+        "SalesApi:ServerBase": "http://localhost:5100",
+        "SalesApi:ClientBase": "http://localhost:4200"
       },
       "applicationUrl": "http://localhost:5100/"
     }
