--- a/Sales.Api/Sales.Api.csproj
+++ b/Sales.Api/Sales.Api.csproj
@@ -22,6 +22,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="2.0.1" />
+  </ItemGroup> 
+
+  <ItemGroup>
     <ProjectReference Include="..\ApiSettings\ApiSettings.csproj" />
     <ProjectReference Include="..\Sales.Core\Sales.Core.csproj" />
     <ProjectReference Include="..\Sales.Infrastructure\Sales.Infrastructure.csproj" />
