--- a/Sales.Infrastructure/Sales.Infrastructure.csproj
+++ b/Sales.Infrastructure/Sales.Infrastructure.csproj
@@ -14,5 +14,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.2" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.0.8.3" />
   </ItemGroup>
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.2" />
+  </ItemGroup>
 
 </Project>
